--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ SESSION_ID=
 OWNER_NUMBER=+263789544743
 OWNER_NUMBERS=263789544743
 PREFIX=.
-PACK_NAME=𝐃𝐔𝐓𝐒𝐕𝐀 𝐀𝐈
-BOT_NAME=𝐃𝐔𝐓𝐒𝐕𝐀 𝐀𝐈
+PACK_NAME=𝐃𝐔𝐓𝐒𝐕𝐀_𝐀𝐈
+BOT_NAME=𝐃𝐔𝐓𝐒𝐕𝐀_𝐀𝐈
 AUTHOR=𝐓𝐈𝐍𝐀𝐒𝐇𝐄 𝐙𝐔𝐊𝐀
 PUBLIC=true
 UNAVAILABLE=true
 AVAILABLE=false
 OWNER_NAME=𝐓𝐈𝐍𝐀𝐒𝐇𝐄 𝐙𝐔𝐊𝐀
-MENU_IMAGE="https://files.catbox.moe/8x0e26.jpg,https://files.catbox.moe/3ox7k9.jpg,https://files.catbox.moe/essd1n.jpg,https://files.catbox.moe/0ly0h6.jpg,https://files.catbox.moe/n2vriz.jpg,https://files.catbox.moe/mlazyw.jpg"
+MENU_IMAGE="https://litter.catbox.moe/nrbb5zfx0nrk6v4y.jpg"
 AUTO_READ_MESSAGES=false
 ANTI_DELETE=false
 ANTI_TAG=false
